--- a/myapp/react-app/src/index.css
+++ b/myapp/react-app/src/index.css
@@ -48,28 +48,25 @@ code {
 nav {
   background-color: #000;
   height: 64px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto; /* 첫 번째 열은 1fr, 두 번째 열은 자동 크기 */
   align-items: center;
-  justify-content: space-between;
 }
-
-
 
 nav ul {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr)); /* 자동으로 열 크기 조절 */
+  gap: 32px; /* 열 사이의 간격 */
+  margin-bottom: 5px;
 }
-
 
 nav li {
   list-style: none;
-  margin-right: 32px;
-  margin-bottom: 5px;
   position: relative;
-  top:5px;
-
+  top: 5px;
 }
 
-.fes {
+/* .fes {
   margin-left: 350px;
 }
 
@@ -84,16 +81,13 @@ nav li {
 .qa {
   margin-left: 50px;
  
-}
+} */
 
-.login{
-  margin-left: 50px;
-  height: 20px;
-   position: relative;
-   bottom:7px;
-}
+  .login{
+    border :1px solid ;
+}  
 
-.logout{
+ /* .logout{
   position: relative;
   background-color: #000;
   height: 20px;
@@ -103,18 +97,18 @@ nav li {
   width:150px;
   top:8px;
   cursor: pointer;
+}  */
 
-}
 .logout span:hover{
   color: aqua;
 }
-.mypage{
+/* .mypage{
   margin-left: 25px;
   height: 20px;
    position: relative;
    bottom:7px;
  
-}
+} */
 
 nav li:last-child {
   margin-right: 0;
@@ -142,7 +136,7 @@ nav a:hover {
   align-items: center;
   background-image: url(../img/main.jpg);
   background-repeat: no-repeat;
-  background-size: 1905px 560px;
+  background-size: 100% 560px;
 }
 
 .banner img {
