--- a/myapp/react-app/src/component/Modal/css/Infomodal.css
+++ b/myapp/react-app/src/component/Modal/css/Infomodal.css
@@ -18,7 +18,7 @@
   width: 250px;
   margin-left: 115px;
   border-radius: 180px;
-  background-image: url(../../../../img/1.jpg);
+  background-image: url(../img/1.jpg);
   background-size: cover;
 }
 
