--- a/myapp/react-app/src/component/Mypage/css/Myintro.css
+++ b/myapp/react-app/src/component/Mypage/css/Myintro.css
@@ -58,7 +58,7 @@
   display:inline-block;
   left:105px;
   top:20px;
-  background-image: url(../../../../img/1.jpg);
+  background-image: url(../img/1.jpg);
   background-size: cover;
 }
 .intro-write-wrap{
