--- a/myapp/react-app/src/component/Banner/css/Banner.css
+++ b/myapp/react-app/src/component/Banner/css/Banner.css
@@ -13,22 +13,25 @@
   width: 500px;
   margin-left: 32px;
 }
-
 .banner-text {
-  margin-left: 80px;
-  animation: slide  2s;
+
+margin-left: 100px;
+
 }
 
 .banner-text h1 {
+  position: relative;
   font-size: 48px;
   margin-bottom: 32px;
   line-height: 1.2;
-  animation: slide  2s;
+  animation: slide 1s ease-out;
 }
 
 .banner-text p {
+  position: relative;
   font-size: 24px;
   margin-bottom: 40px;
+  animation: slide 1.2s ease-out;
 }
 
 .banner-text a {
@@ -39,17 +42,30 @@
   padding: 16px 32px;
   border-radius: 4px;
   text-decoration: none;
+  position: relative;
+  animation: slide 1.5s ease-out;
 
-}
-
-.banner-h1{
-  animation: slide  2s;
 }
 @keyframes slide {
   from{
-    left:-100px;
+    left:-200px;
+    opacity: 0;
   }
   to{
-    left:400px;
+    left:0px;
+    opacity: 1;
   }
+  
 }
+@keyframes disappear {
+  from{
+    left:0px;
+    opacity: 1;
+  }
+  to{
+    left:-200px;
+    opacity: 0;
+  }
+  
+}
+
