--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -1,4 +1,121 @@
-.body-color{
-  margin-top: -25px;
-  background-color: black;
-  }
+
+.clickPage{
+  background-color: #000000;
+  width: 1280px;
+  min-height: 720px;
+  /* 
+  color: #f7f7f7;
+  object-fit: cover;
+  display: grid;
+  margin-left: 80px;
+  margin-top: 150px;
+  grid-template-columns: 270px 270px 270px 270px;
+  grid-template-rows: 270px 270px 270px 270px; */
+}
+
+.gclickbox{
+  margin-left: 560px;
+  width: 400px;
+  height: 680px;
+  background-color: rgb(255, 255, 255);
+  display: grid;
+  grid-template-columns: 400px;
+  grid-template-rows: 60px 400px 50px 30px 140px ;
+}
+
+.gheader {
+  width: 400px;
+  height: 60px;
+  display: grid;
+  grid-template-columns: 70px 170px 160px;
+  grid-template-rows: 60px;
+}
+
+.gheadprofile{
+  margin-top: 5px;
+  margin-left: 10px;
+  background-image: url(../img/1.jpg);
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 180px;
+}
+
+.gheaduser{
+  margin-top: 20px;
+  width: 170px;
+  height: 20px;
+  font-weight: bold;
+  
+}
+
+.gheadfollow{
+  text-align: center;
+  margin-top: 15px;
+  margin-left: 80px;
+  width: 70px; 
+  height: 30px; 
+  background-color: #3897F0; 
+  color: #fff; 
+  border: none; 
+  border-radius: 30px; 
+  font-size: 14px; 
+  font-weight: bold;
+}
+
+.gbody{
+  align-items: center;
+  background-repeat: no-repeat;
+  background-size: 400px 400px;
+}
+
+.gbodybnt{
+  width: 400px;
+  height: 50px;
+  display: grid;
+  grid-template-columns:100px 50px 250px;
+  grid-template-rows: 50px;
+}
+
+.glike{
+  /* background-color: red; */
+  display: inline;
+  width: 40px;
+  height: 30px;
+}
+
+.glikesum{
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.gbecontent{
+  font-size: 16px;
+  text-align: left;
+  width: 400px;
+  height: 30px;
+}
+
+.gcomment{
+  background-color: rgb(250, 250, 200);
+  width: 400px;
+  height: 140px;
+}
+
+.glikebnt{
+  background-color: #fff;
+  border:none;
+  width: 50px;
+  height: 50px;
+}
+
+.gcommetbnt{
+  margin-top: 3px;
+  margin-left: 7px;
+  width: 44px;
+  height: 44px;
+  background-color: #fff;
+  background-image: url(../img/message.png);
+  background-size: cover;
+  border: none;
+}
