--- a/myapp/react-app/src/component/Banner/css/Banner.css
+++ b/myapp/react-app/src/component/Banner/css/Banner.css
@@ -7,6 +7,7 @@
   background-image: url(../img/main.jpg);
   background-repeat: no-repeat;
   background-size: 100% 560px;
+  transition: 'background-image 1s ease-out'
 }
 
 .banner img {
