--- a/myapp/react-app/src/component/Modal/css/Gallerywriting.css
+++ b/myapp/react-app/src/component/Modal/css/Gallerywriting.css
@@ -79,7 +79,7 @@
   background-color: #acacac6b;
   position: relative;
   left: -320px;
-  top: -450px;
+  top: -460px;
 }
 
 .Gallerywriting-btn-cancel-box {
@@ -88,7 +88,7 @@
   background-color: #acacac6b;
   position: relative;
   left: -300px;
-  top: -450px;
+  top: -460px;
 
 }
 
@@ -110,7 +110,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)
 }
 
-#Gall-write-content {
+#gallwrite-content {
   display: inline-block;
   height: 400px;
   width: 350px;
@@ -132,7 +132,7 @@
   bottom:50px;
 }
 
-#Gall-write-title {
+#gallwrite-title {
   display: inline-block;
   position: relative;
   left: -15px;
@@ -152,7 +152,7 @@
   border-radius: 10px;
   background-color: #ffffff6a;
   position: relative;
-  top: -453px;
+  top: -450px;
 }
 
 .Gallerywriting-file-div {
@@ -167,7 +167,7 @@
   top: -490px;
 }
 
-#file {
+#gallwrite-file {
   display: inline-block;
   position: relative;
   left: -15px;
