--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -1,11 +1,13 @@
-.clickPage {
+.clickPage {  
   background-color: #00000060;
-  width: 1080px;
-  min-height: 720px;
+  width: 400px;
+  min-height: 680px;
+  margin-top:-320px;
+  margin-left:-200px;
 }
 
 .gclickbox {
-  position: relative;
+  position: absolute;
   width: 400px;
   height: 680px;
   background-color: rgb(255, 255, 255);
@@ -116,7 +118,7 @@
 
 .gdetail-modal-box {
   display: inline-block;
-  position: relative;
+  position: absolute;
   left: 10px;
   background-color: #3897F0;
   /* border: 1px solid darkblue; */
@@ -124,7 +126,7 @@
 }
 
 .gdetail-modal-box2 {
-  position: relative;
+  position: absolute;
   display:inline-block;
   width:400px;
   /* border: 1px solid darkblue; */
@@ -132,7 +134,7 @@
 }
 .modal-header{
   display: inline-block;
-  position: relative;
+  position: absolute;
   border:0px solid;
   width: 100px;
   height:50px;
@@ -144,19 +146,16 @@
   width: 25px;
   height:25px;
 }
-.modal-body{
+/* .modal-body{
   position: relative;
   display: inline-block;
-}
-.clickPage{
+} */
+/* .clickPage{
   width:400px;
-}
-.modal-content{
+} */
+/* .modal-content{
   position: relative;
   display:inline-block;
   width:500px;
   left:250px;
-}
-.fade modal show{
-  width:100px;
-}
+} */
