--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -159,3 +159,115 @@
   width:500px;
   left:250px;
 } */
+
+/*호버전 색 조정*/
+.x-container {
+  width: 40px;
+  height: 40px;
+  /* background-color: rgb(137, 137, 137); */
+  border-radius: 30px;
+  transition: 250ms ease;
+  cursor: pointer;
+  position: absolute;
+  top:-360px;
+  left:172px;
+}
+/*호버전 색 조정*/
+.x-container:hover{
+  background: rgb(0, 0, 0);
+  box-shadow: 0px 3px2px 2px rgb(190, 190, 190);
+  border-radius: 30px;
+}
+
+.x-container div {
+  transition:  250ms ease;
+}
+
+.x-container div:first-of-type {
+  width: 3px;
+  height: 20px;
+  background-color: #ffff;
+  border-radius: 2px;
+  position: absolute;
+  top: 23.9%;
+  left: 44.7%;
+  transform: translateX(-50%);
+  transform: rotate(45deg);
+}
+.x-container div:last-of-type {
+  width: 20px;
+  height: 3px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  position: absolute;
+  top: 45%;
+  left: 24%;
+  transform: translateX(-50%);
+  transform: rotate(45deg);
+}
+
+
+.x-container:hover div:first-of-type {
+  height: 25;
+  transform: translateX(calc(-50% + 1.8px)) rotate(135deg) translateY(0px);
+}
+
+.x-container:hover div:last-of-type {
+  width:20px;
+  transform: translateX(calc(-50% + 9.5px)) rotate(-45deg) translateY(0px);
+}
+
+
+.gdetail-image-container {
+  position: relative;
+}
+
+.gdetail-image-navigation {
+  position: absolute;
+  top: 93%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* transform: translateY(-50%); */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  pointer-events: none;
+}
+
+.gdetail-prev-button {
+  left: 0;
+}
+
+.gdetail-next-button {
+  right: 0;
+}
+
+.gdetail-prev-button,
+.gdetail-next-button {
+  width: 50%;
+  height: 100%;
+  pointer-events: auto;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gdetail-prev-button:hover,
+.gdetail-next-button:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gdetail-image-info {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size: 16px;
+  padding: 2px 5px;
+  pointer-events: none;
+}
