--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -20,7 +20,7 @@
   width: 400px;
   height: 60px;
   display: grid;
-  grid-template-columns: 70px 170px 160px;
+  grid-template-columns: 70px 170px 20px 20px 120px;
   grid-template-rows: 60px;
 }
 
@@ -43,9 +43,10 @@
 }
 
 .gheadfollow {
+  position: relative;
   text-align: center;
   margin-top: 15px;
-  margin-left: 80px;
+  margin-left: 60px;
   width: 70px;
   height: 30px;
   background-color: #3897F0;
@@ -87,6 +88,7 @@
   text-align: left;
   width: 400px;
   height: 30px;
+  font-weight: bolder;
 }
 
 .glikebnt {
@@ -96,9 +98,10 @@
   height: 50px;
 }
 
-.gcommetbnt {
-  margin-top: 3px;
-  margin-left: 7px;
+.gcommentbnt {
+  position: relative;
+  top: -78px;
+  margin-left: 110px;
   width: 44px;
   height: 44px;
   background-color: #fff;
@@ -261,4 +264,18 @@
   font-size: 16px;
   padding: 2px 5px;
   pointer-events: none;
+}
+.gdeletebnt{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  top:15px;
+  width: 70px;
+  height: 30px;
+  background-color: #3897F0;
+  color: #fff;
+  border: none;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: bold;
 }
