--- a/myapp/react-app/src/component/Mypage/css/Myintro.css
+++ b/myapp/react-app/src/component/Mypage/css/Myintro.css
@@ -66,7 +66,7 @@
   display:inline-block;
   top:80px;
   width: 480px;
-  height: 150px; 
+  height: 100px; 
 }
 .intro-write-wrap span{
   position: relative;
@@ -75,13 +75,29 @@
   font-weight: bold;
   left:20px;
 }
-.intro-write{
+.intro-name{
   position: relative;
   display:inline-block;
   width:450px;
   height: 100px;
   font-size:18px;
-  left:20px;
+  left:30px;
+}
+.intro-nick{
+  position: relative;
+  display:inline-block;
+  width:450px;
+  height: 100px;
+  font-size:18px;
+  left:30px;
+}
+.intro-intro{
+  position: relative;
+  display:inline-block;
+  width:450px;
+  height: 100px;
+  font-size:18px;
+  left:30px;
 }
 .intro-intro-wrap{
   position: relative;
@@ -97,13 +113,13 @@
   font-weight: bold;
   left:20px;
 }
-.intro-intro{
+.intro-inter{
   position: relative;
   display:inline-block;
   width:450px;
   height: 100px;
   font-size:18px;
-  left:20px;
+  left:30px;
 }
 .intro-hobby-wrap{
   position: relative;
@@ -125,7 +141,7 @@
   width:450px;
   height: 100px;
   font-size:18px;
-  left:20px;
+  left:30px;
 }
 .intro-date-wrap{
   position: relative;
@@ -147,5 +163,5 @@
   width:450px;
   height: 100px;
   font-size:18px;
-  left:20px;
+  left:30px;
 }
