--- a/myapp/react-app/src/component/Benefits/css/Benefits.css
+++ b/myapp/react-app/src/component/Benefits/css/Benefits.css
@@ -72,13 +72,21 @@
   background-repeat: no-repeat;
   background-size: 500px 500px;
   cursor: pointer;
-}
+  transition: all 0.3s ease;
+  }
+  .f1:hover{
+    opacity: 60%;
+  }
 
 .ff2 {
   background-image: url(../img/22.webp);
   background-repeat: no-repeat;
   background-size: 500px 500px;
   cursor: pointer;
+  transition: all 0.2s ease;
+}
+.ff2:hover{
+  opacity: 60%;
 }
 
 .fff1 {
@@ -87,13 +95,20 @@
   background-repeat: repeat;
   background-size: 500px 500px;
   cursor: pointer;
+  transition: all 0.2s ease;
 }
-
+.fff1:hover{
+  opacity: 60%;
+}
 .ffff2 {
   background-image: url(../img/mainrunning.png);
   background-repeat: repeat;
   background-size: 500px 500px;
   cursor: pointer;
+  transition: all 0.2s ease;
+}
+.ffff2:hover{
+  opacity: 60%;
 }
 
 .f2 {
