--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -43,10 +43,10 @@
 }
 
 .gheadfollow {
-  position: relative;
+  position: absolute;
   text-align: center;
   margin-top: 15px;
-  margin-left: 60px;
+  margin-left: 320px;
   width: 70px;
   height: 30px;
   background-color: #3897F0;
@@ -55,6 +55,10 @@
   border-radius: 30px;
   font-size: 14px;
   font-weight: bold;
+  transition: all 0.2s ease;
+}
+.gheadfollow:active{
+  transform:scale(0.96);
 }
 
 .gbody {
@@ -100,7 +104,7 @@
 
 .gcommentbnt {
   position: relative;
-  top :2px;
+  top:2px;
   margin-left: 20px;
   width: 44px;
   height: 44px;
@@ -239,8 +243,9 @@
 
 .gdetail-prev-button,
 .gdetail-next-button {
-  width: 50%;
-  height: 100%;
+  position: relative;
+  width:25px;
+  height: 22px;
   pointer-events: auto;
   background-color: transparent;
   color: white;
@@ -251,6 +256,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  bottom:190px;
+  opacity: 50%;
+
+}
+.gdetail-prev-button,
+.gdetail-next-button:hover {
+opacity:100%;
+
 }
 
 .gdetail-prev-button:hover,
@@ -266,9 +279,10 @@
   pointer-events: none;
 }
 .gdeletebnt{
-  position: relative;
+  position: absolute;
   display: inline-block;
   text-align: center;
+  margin-left:80px;
   top:15px;
   width: 70px;
   height: 30px;
@@ -278,4 +292,8 @@
   border-radius: 30px;
   font-size: 14px;
   font-weight: bold;
+  transition: all 0.2s ease;
+}
+.gdeletebnt:active{
+  transform:scale(0.96);
 }
