--- a/myapp/react-app/src/component/Mypage/css/Myintro.css
+++ b/myapp/react-app/src/component/Mypage/css/Myintro.css
@@ -58,8 +58,12 @@
   display:inline-block;
   left:105px;
   top:20px;
-  background-image: url(../img/1.jpg);
+  /* background-image: url({image}); */
   background-size: cover;
+}
+.intro-img img{
+width:250px;
+height:250px;
 }
 .intro-write-wrap{
   position: relative;
