검색기능, 갤러리 조회수,날짜,좋아요수  추가

--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -297,3 +297,13 @@ opacity:100%;
 .gdeletebnt:active{
   transform:scale(0.96);
 }
+.gview-cnt{
+position: absolute;
+display:inline-block;
+border:1px solid;
+width:50px;
+height:30px;
+left:280px;
+margin-top: 5px;
+text-align: right;
+}
