--- a/myapp/react-app/src/component/Gallery/css/Gallerylist.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerylist.css
@@ -42,9 +42,71 @@
 .gall-img {
   width: 350px;
   height: 350px;
+  border-radius: 25px;
 
 }
 .gall-div-detail:hover img {
   transform: scale(1.1);
   transition: all 0.3s ease;
 }
+.ginput-wrap{
+    width: 450px;
+    height: 80px;
+    background-color: black;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    position: absolute;
+    display: inline-block;
+    top:150px;
+    left:250px;
+}
+.ginput-data{
+  height: 60px;
+  width:100%;
+  position: relative;
+
+}
+.ginput-data input{
+  position: relative;
+  width:200px;
+  height: 100%;
+  border:none;
+  color:white;
+  border-bottom :2px solid silver;
+  font-size:17px;
+  outline: none;
+  background-color: black;
+}
+.ginput-data input:focus ~ label,
+.ginput-data input:valid ~ label{
+  transform: translateY(-25px);
+  font-size: 15px;
+  color:#4158d0;
+}
+.ginput-data label{
+  position : absolute;
+  bottom:18px;
+  left:5px;
+  color:wheat;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.ginput-data .underline{
+  position: absolute;
+  bottom:0px;
+  height: 2px;
+  width: 200px;
+}
+.ginput-data .underline::before{
+position: absolute;
+content: "";
+height: 100%;
+width:100%;
+background:#4158d0 ;
+transform: scaleX(0);
+transition: transform 0.3s ease;
+}
+.ginput-data input:focus ~ .underline::before,
+.ginput-data input:valid ~ .underline:before{
+  transform: scaleX(1);
+}
+
