--- a/myapp/react-app/src/component/Header/css/Header.css
+++ b/myapp/react-app/src/component/Header/css/Header.css
@@ -33,7 +33,7 @@ nav {
 
 nav ul {
   display: flex; /* display 속성을 flex로 변경 */
-  gap: 32px; /* 열 사이의 간격 */
+  gap: 20px; /* 열 사이의 간격 */
   margin-bottom: 5px;
 }
 
@@ -68,14 +68,13 @@ nav li:nth-child(3) {
  nav li:nth-child(8) {
   margin-left: -60px;
  }
+ nav li:nth-child(9) {
+  margin-left: 0px;
+ }
+ nav li:nth-child(10) {
+  margin-left: -40px;
+ }
 
-.login{
-
-}  
-.mypage{
-  
-
-}
   .logout{
   background-color: #000;
   width:200px;
@@ -110,5 +109,16 @@ nav a {
 
 nav a:hover {
   color: aqua;
+}
+.main-profile-img{
+  position: relative;
+  display: inline-block;
+  width:34px;
+  height: 100%;
+  border-radius: 100%;
+}
+.logout-span{
+  position:relative;
+  display: inline-block;
 }
 
