--- a/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerydetail.css
@@ -66,15 +66,6 @@
   background-repeat: no-repeat;
   background-size: 400px 400px;
 }
-
-.gbodybnt {
-  width: 400px;
-  height: 50px;
-  display: grid;
-  grid-template-columns: 100px 50px 250px;
-  grid-template-rows: 50px;
-}
-
 .glike {
   /* background-color: red; */
   display: inline;
@@ -90,9 +81,11 @@
 .gbecontent {
   font-size: 16px;
   text-align: left;
-  width: 400px;
-  height: 30px;
-  font-weight: bolder;
+  width: 370px;
+  min-height: 30px;
+  font-weight: bold;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
 .glikebnt {
@@ -100,12 +93,14 @@
   border: none;
   width: 50px;
   height: 50px;
+  left:10px;
 }
 
 .gcommentbnt {
-  position: relative;
-  top:2px;
-  margin-left: 20px;
+  position: absolute;
+  display: inline-block;
+  top:462px;
+  left:130px;
   width: 44px;
   height: 44px;
   background-color: #fff;
@@ -300,10 +295,25 @@ opacity:100%;
 .gview-cnt{
 position: absolute;
 display:inline-block;
-border:1px solid;
 width:50px;
 height:30px;
-left:280px;
-margin-top: 5px;
-text-align: right;
+left:345px;
+top:465px;
+text-align: left;
+}
+.gtag-list{
+position: absolute;
+display:inline-block;
+top:650px;
+left:10px;
+}
+.viewcnt-img{
+  position: absolute;
+  display: inline-block;
+  width:30px;
+  height:30px;
+  background-image: url(../img/view.png);
+  background-size: cover;
+  top:463px;
+  left:310px;
 }
